# hex

./: .gitignore  .hexignore  CLAUDE.md  CODEOWNERS  Cargo.toml  IMPLEMENTATION-STATUS.md  LANGUAGE-INJECTION-STATUS.md  LICENSE  README.md  analyze_hex.py  clippy.toml  docker-compose.yml  eslint.config.js  founding-goals.md  install.sh  opencode.json  package-lock.json  package.json  start.sh  tsconfig.json
examples/build-a-fibonacci-cli-in-rust-that-prints-the-sequ/: Cargo.toml  README.md  start.sh
examples/build-a-fibonacci-cli-in-rust-that-prints-the-sequ/src/: main.rs
examples/hex-fizzbuzz-hermes/: Cargo.toml  README.md
examples/hex-fizzbuzz-hermes/src/: lib.rs  main.rs
examples/sandbox-demo/: Cargo.toml  README.md  hex-task.json
examples/sandbox-demo/src/: main.rs
examples/task-board/: Cargo.toml
examples/task-board/src/: main.rs
hex-agent/: Cargo.toml  Dockerfile  Dockerfile.dev  build.rs  sandbox.yml
hex-agent/.claude-flow/data/: pending-insights.jsonl
hex-agent/.hex/: status.json
hex-agent/src/: agent_comms_subscriber.rs  inference_client.rs  lib.rs  main.rs  test_utils.rs  validation_judge.rs  worker.rs  workplan_executor.rs  worktree_guard.rs
hex-agent/src/adapters/: mod.rs  safe_file_writer.rs  validator.rs
hex-agent/src/domain/: agents.rs  api_optimization.rs  context.rs  hex_knowledge.rs  hooks.rs  mcp.rs  messages.rs  mod.rs  output_score.rs  pricing.rs  secret_grant.rs  skills.rs  tokens.rs  tools.rs  workplan.rs
hex-agent/tests/: daemon_worktree_required.rs  domain_tests.rs  hub_integration_test.rs  mcp_server_e2e.rs  rl_integration_test.rs  stdb_task_lifecycle.rs  task_lifecycle_e2e.rs
hex-analyzer/: Cargo.toml
hex-analyzer/src/: lib.rs  main.rs
hex-analyzer/tests/: cohesion.rs  composition_churn.rs  dead_layer.rs  duplication.rs  god_types.rs  orphan.rs
hex-chat/: Cargo.toml
hex-chat/assets/: dashboard.html
hex-chat/src/: main.rs
hex-chat/ui/: index.html  package-lock.json  package.json  vite.config.ts
hex-cli/: Cargo.toml  build.rs
hex-cli/src/: assets.rs  autonomous_demo.rs  fmt.rs  lib.rs  main.rs  nexus_client.rs  prompts.rs  session.rs
hex-cli/tests/: adr_doctor_shadow_promote.rs  aios_compliance.rs  declarative_swarm_test.rs  insight_extractor.rs  persona_wiring.rs  q_report_render.rs  reconcile_evidence.rs  sched_adr_health_tick.rs  sched_enqueue_messaging.rs  worker_delegation_test.rs  worker_local_ollama_e2e.rs  workflow_punch_list_linter.rs  worktree_cli_tests.rs
hex-core/: Cargo.toml
hex-core/src/: composition.rs  config.rs  inference_q.rs  lib.rs  parser.rs  quantization.rs  research_finding.rs  telemetry.rs  test_validation.rs  types.rs  validation.rs
hex-core/tests/: substrate_p5_integration.rs
hex-desktop/: Cargo.toml  tauri.conf.json
hex-desktop/src/: commands.rs  lib.rs  main.rs  tray.rs
hex-desktop/src-frontend/: chat.html  project-switcher.js  tauri-bridge.js
hex-desktop/tests/: commands_test.rs  integration_test.rs
hex-hub/: AUDIT.md  Cargo.toml  README.md
hex-hub-core/: Cargo.toml
hex-hub-core/assets/: chat.html
hex-hub-core/src/: cleanup.rs  lib.rs  persistence.rs  spacetime_launcher.rs  state.rs
hex-hub-core/tests/: agent_hub_e2e_test.rs  build_app_test.rs  chat_roundtrip_test.rs  chat_test.rs  rl_integration_test.rs  sqlite_state_test.rs  workplan_e2e_test.rs
hex-hub/assets/: chat.html  index.html
hex-hub/src/: daemon.rs  embed.rs  main.rs  persistence.rs  spacetime_bindings.rs  spacetime_launcher.rs  state.rs
hex-nexus/: Cargo.toml  Dockerfile  build.rs
hex-nexus/assets/: CLAUDE.md  chat.html  index.html  index.legacy.html  package-lock.json  package.json  vite.config.js  vitest.config.ts
hex-nexus/src/: brain_service.rs  build_banner.rs  cleanup.rs  complexity.rs  composition_root.rs  config_sync.rs  daemon.rs  embed.rs  lib.rs  neural_lab_quant.rs  persistence.rs  quant_router.rs  rate_limiter.rs  sched_service.rs  spacetime_launcher.rs  state.rs  state_config.rs  task_type_classifier.rs  templates.rs
hex-nexus/tests/: agent_coordination.rs  agent_hub_e2e_test.rs  build_app_test.rs  build_app_test.rs.disabled  chat_roundtrip_test.rs  chat_test.rs  classifier_pipeline.rs  claude_code_adapter.rs  complex_app_task.rs  composition_standalone.rs  dashboard_visibility.rs  dispatch_ui_task.rs  docker_sandbox_e2e.rs  hexflo_memory_adapter.rs  hexflo_memory_e2e.rs  hexflo_test.rs  hijack_regression.rs  merge_gate_lifecycle.rs  merge_gate_reducers.rs  ollama_adapter.rs  q_report_route.rs  quant_routing.rs  remote_agent_integration.rs  rl_integration_test.rs  routing_integration.rs  scaffolding.rs  sched_daemon_terminal_state.rs  secret_grant_integration.rs  send_task_to_agent.rs  sqlite_state_test.rs  standalone_dispatch_e2e.rs  substrate_e2e.rs  tier_routing.rs  tiered_routing_e2e.rs  workplan_e2e_test.rs  workplan_event_emit.rs  workplan_execute_status.rs  workplan_execute_status_contract.rs  worktree_enforcement.rs
hex-parser/: Cargo.toml  package.json
hex-parser/src/: lib.rs
spacetime-modules/: Cargo.toml
spacetime-modules/agent-comms/: Cargo.toml
spacetime-modules/agent-definition-registry/: Cargo.toml
spacetime-modules/agent-registry/: Cargo.toml  README.md
spacetime-modules/architecture-enforcer/: Cargo.toml
spacetime-modules/chat-relay/: Cargo.toml  README.md
spacetime-modules/conflict-resolver/: Cargo.toml
spacetime-modules/file-lock-manager/: Cargo.toml
spacetime-modules/fleet-state/: Cargo.toml
spacetime-modules/hexflo-cleanup/: Cargo.toml
spacetime-modules/hexflo-coordination/: Cargo.toml  README.md
spacetime-modules/hexflo-lifecycle/: Cargo.toml
spacetime-modules/hook-registry/: Cargo.toml
spacetime-modules/inference-bridge/: Cargo.toml
spacetime-modules/inference-gateway/: Cargo.toml  README.md
spacetime-modules/neural-lab/: Cargo.toml  README.md
spacetime-modules/rl-engine/: Cargo.toml  README.md
spacetime-modules/secret-grant/: Cargo.toml  README.md
spacetime-modules/skill-registry/: Cargo.toml
spacetime-modules/test-results/: Cargo.toml
spacetime-modules/workplan-state/: Cargo.toml
(+3505 files in other folders)
