[workspace]
members = ["hex-nexus", "hex-desktop", "hex-core", "hex-parser", "hex-agent", "hex-cli", "spacetime-modules/test-results"]
resolver = "2"

[workspace.package]
version = "26.4.0"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
