[package]
name = "hex-agent"
version.workspace = true
edition.workspace = true
description = "Autonomous AI agent for hex — interfaces directly with Anthropic Messages API"
license.workspace = true

[dependencies]
# HTTP + streaming
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# WebSocket (connect back to hub)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Shared domain types + ports
hex-core = { path = "../hex-core" }

# Utilities
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
regex = "1"
thiserror = "2"
async-trait = "0.1"
anyhow = "1"

# Markdown frontmatter parsing
gray_matter = "0.2"

# SpacetimeDB subscription support (optional)
dashmap = { version = "6", optional = true }
spacetimedb-sdk = { version = "2.0", optional = true }
hex-nexus = { path = "../hex-nexus", optional = true, features = ["spacetimedb"] }

[features]
default = ["spacetimedb"]
spacetimedb = ["dep:dashmap", "dep:spacetimedb-sdk", "dep:hex-nexus"]
