[package]
name = "hex-analyzer"
version.workspace = true
edition.workspace = true
description = "Architectural-health detectors for hex — orphan adapters/ports, port cohesion, god types, etc."
license.workspace = true

[lib]
name = "hex_analyzer"
path = "src/lib.rs"

[[bin]]
name = "hex-analyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
