[package]
name = "hex-chat"
version.workspace = true
edition.workspace = true
description = "Developer command center for hex — TUI + web dashboard for agent fleet management"
license.workspace = true

[[bin]]
name = "hex-chat"
path = "src/main.rs"

[dependencies]
hex-core = { path = "../hex-core" }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Web dashboard
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
