[package]
name = "hex-cli"
version.workspace = true
edition.workspace = true
description = "Hexagonal architecture CLI for LLM-driven development"
license.workspace = true

[[bin]]
name = "hex"
path = "src/main.rs"

[dependencies]
hex-core = { path = "../hex-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
anyhow = "1"
dirs = "5"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
dialoguer = "0.11"
gethostname = "0.4"
# ADR compliance rule loading (ADR-045)
toml = "0.8"
# Embedded asset bundle (ADR-2603221522)
rust-embed = "8"
# TUI for `hex dev` (ADR-2603232005)
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
