[package]
name = "hex-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared domain types and port traits for the hex hexagonal architecture framework"

[lib]
crate-type = ["lib"]

# Zero runtime dependencies beyond serde + error handling + async traits.
# This is the gravity center — every other crate depends on hex-core.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
