[package]
name = "hex-core"
version = "26.4.31"
edition = "2021"
license = "MIT"
description = "Shared domain types and port traits for the hex hexagonal architecture framework"

[lib]
crate-type = ["lib"]

# Zero runtime dependencies beyond serde + error handling + async traits.
# This is the gravity center — every other crate depends on hex-core.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
# Substrate contracts (ADR-2026-04-26-1500 — RuntimeComposition, telemetry, IAdapterGenerator).
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
