[package]
name = "hex-hub-core"
version = "26.3.1"
edition = "2021"
description = "Core library for hex-hub — extracted for embedding in Tauri and headless modes"
license = "MIT"

[lib]
name = "hex_hub_core"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
mime_guess = "2"
http = "1"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2.183"
reqwest = { version = "0.12", features = ["json", "stream"] }
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"
thiserror = "2"
sha2 = "0.10"
hex-literal = "0.4"
# SpacetimeDB client SDK — optional, enabled via --features spacetimedb
spacetimedb-sdk = { version = "2.0", optional = true }

[dev-dependencies]
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["spacetimedb"]
spacetimedb = ["spacetimedb-sdk"]
