[package]
name = "hex-hub"
version = "26.3.1"
edition = "2021"
description = "Dashboard hub for hex — hexagonal architecture framework"
license = "MIT"

[dependencies]
hex-hub-core = { path = "../hex-hub-core" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
spacetimedb = ["hex-hub-core/spacetimedb"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
