[package]
name = "hex-nexus-hub"
version = "26.3.1"
edition = "2021"
description = "Dashboard hub for hex — hexagonal architecture framework"
license = "MIT"

[[bin]]
name = "hex-nexus"
path = "src/main.rs"

[dependencies]
hex-nexus = { path = "../hex-nexus" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
spacetimedb = ["hex-nexus/spacetimedb"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
