[package]
name = "hex-nexus"
version.workspace = true
edition.workspace = true
description = "Orchestration nexus for hex — library + binary for agent management, swarm coordination, and dashboard"
license.workspace = true

[lib]
name = "hex_nexus"
path = "src/lib.rs"

[[bin]]
name = "hex-nexus"
path = "src/bin/hex-nexus.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
http = "1"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
libc = "0.2.183"
reqwest = { version = "0.12", features = ["json", "stream"] }
russh = "0.46"
russh-keys = "0.46"
async-trait = "0.1"
thiserror = "2"
aes-gcm = "0.10"
base64 = "0.22"
gethostname = "0.5"
sha2 = "0.10"
# Tree-sitter native parsers for architecture analysis (ADR-034 Phase 2)
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
# OpenAPI spec generation (ADR-039)
utoipa = { version = "5", features = ["axum_extras"] }
# NOTE: utoipa-swagger-ui v8 requires axum 0.7 — incompatible with our axum 0.8.
# Swagger UI is served as a static redirect to the hosted version instead.
# WebSocket transport for remote agent communication (ADR-040)
tokio-tungstenite = "0.24"
# Shared domain types and port traits (hex-core is the gravity center)
hex-core = { path = "../hex-core" }
# SQLite for offline-first session persistence (ADR-036)
rusqlite = { version = "0.34", features = ["bundled"], optional = true }
# SpacetimeDB client SDK — optional, enabled via --features spacetimedb
spacetimedb-sdk = { version = "2.0", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[features]
default = ["spacetimedb", "sqlite-session"]
sqlite-session = ["rusqlite"]
spacetimedb = ["spacetimedb-sdk"]
