[package]
name = "hex-parser"
version.workspace = true
edition.workspace = true
description = "Native tree-sitter parsing for hex via NAPI-RS"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8", "serde-json"] }
napi-derive = "2"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
