[workspace]
members = [
    "rl-engine",
    "workplan-state",
    "agent-registry",
    "chat-relay",
    "fleet-state",
    "skill-registry",
    "hook-registry",
    "agent-definition-registry",
    "secret-grant",
    "hexflo-coordination",
    "file-lock-manager",
    "architecture-enforcer",
    "conflict-resolver",
    "inference-gateway",
    "inference-bridge",
    "hexflo-lifecycle",
    "hexflo-cleanup",
    "test-results",
    "neural-lab",
]
resolver = "2"

[workspace.dependencies]
spacetimedb = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
