[workspace]
members = [
    "hexflo-coordination",
    "agent-registry",
    "inference-gateway",
    "secret-grant",
    "agent-comms",
    "rl-engine",
    "chat-relay",
    "neural-lab",
]
resolver = "2"

[workspace.dependencies]
spacetimedb = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
