[package]
name = "fibonacci-cli-adapter-implementation"
version = "0.1.0"
edition = "2021"

# Standalone workspace — prevents Cargo from merging with any parent workspace
[workspace]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
