[workspace]

[package]
name = "sandbox-demo"
version = "0.1.0"
edition = "2021"
description = "A simple key-value store API built inside a hex Docker sandbox agent"

[[bin]]
name = "sandbox-demo"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
